# genomics-mcp

./: AGENT_ASSIGNMENTS.md  MULTI_AGENT_BUILD_PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
domains/: __init__.py
domains/clinical_genomics/: __init__.py  config.yaml
domains/clinical_genomics/evaluators/: __init__.py  functions.py
domains/clinical_genomics/tasks/: variant_task_0001.json
results/: results.json  summary.json
scripts/: run_tests.py
